RDCC-6547:Changes made to add code coverage